[package]
name = "rpi-mmal-rs"
version = "0.0.2"
authors = ["Steven Gu <asongala@163.com>"]
license = "MIT"
description = "Rust binding for `mmal` library of Raspberry Pi"
homepage = "https://github.com/silathdiir/rpi-mmal-rs"
documentation = "https://github.com/silathdiir/rpi-mmal-rs"
repository = "https://github.com/silathdiir/rpi-mmal-rs"
edition = "2018"
exclude = ["tools/*"]

[build-dependencies]
bindgen = "0.50"

[dependencies]
libc = "0.2"
